--- a/react-kossie-project/src/index.css
+++ b/react-kossie-project/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.cursor-pointer {
+  cursor:pointer;
+
+}
+
+/* 기본 상태 */
+.card {
+  transition: all 0.3s ease; /* 부드러운 전환 효과 */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
+}
+
+/* 마우스를 올렸을 때 */
+.card:hover {
+  transform: scale(1.01); /* 크기를 1% 증가 */
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); /* 그림자 더 darken */
+}
